1.优化代码缓存方式,解决之前无效虚拟id缓存问题,解决之前循环多次调用虚拟id问题 2.优化表结构,新增点赞信息记录表 3.添加问题的评论的完整功能 4.新增图片服务类中的 批量获取url方法 5.删除无用satoken依赖 以网关获取信息